# Remenber.-Program.-Go-deeper.

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
assets/ui/: main.rml
src/: globals.cpp  main.cpp
